--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="Money" default="build">
-    <target name="build" depends="prepare,lint,phploc-ci,pdepend,phpmd-ci,phpcs-ci,phpcpd-ci,phpunit,phpdox,-check-failure"/>
+    <target name="build" depends="prepare,lint,phploc-ci,pdepend,phpcpd-ci,phpunit,phpdox,-check-failure"/>
 
     <target name="clean" unless="clean.done" description="Cleanup build artifacts">
         <delete dir="${basedir}/build/api"/>
@@ -74,47 +74,6 @@
         </exec>
     </target>
 
-    <target name="phpmd" description="Perform project mess detection using PHPMD and print result in text format">
-        <exec executable="${basedir}/build/tools/phpmd.phar" taskname="phpmd">
-            <arg path="${basedir}/src"/>
-            <arg value="text"/>
-            <arg path="${basedir}/build/phpmd.xml"/>
-        </exec>
-    </target>
-
-    <target name="phpmd-ci" depends="prepare"
-            description="Perform project mess detection using PHPMD and log result in XML format">
-        <exec executable="${basedir}/build/tools/phpmd.phar" taskname="phpmd">
-            <arg path="${basedir}/src"/>
-            <arg value="xml"/>
-            <arg path="${basedir}/build/phpmd.xml"/>
-            <arg value="--reportfile"/>
-            <arg path="${basedir}/build/logs/pmd.xml"/>
-        </exec>
-    </target>
-
-    <target name="phpcs"
-            description="Find coding standard violations using PHP_CodeSniffer and print result in text format">
-        <exec executable="${basedir}/build/tools/phpcs.phar" taskname="phpcs">
-            <arg value="--standard=PSR2"/>
-            <arg value="--extensions=php"/>
-            <arg value="--ignore=autoload.php"/>
-            <arg path="${basedir}/src"/>
-            <arg path="${basedir}/tests"/>
-        </exec>
-    </target>
-
-    <target name="phpcs-ci" depends="prepare"
-            description="Find coding standard violations using PHP_CodeSniffer and log result in XML format">
-        <exec executable="${basedir}/build/tools/phpcs.phar" output="/dev/null" taskname="phpcs">
-            <arg value="--report=checkstyle"/>
-            <arg value="--report-file=${basedir}/build/logs/checkstyle.xml"/>
-            <arg value="--standard=PSR2"/>
-            <arg value="--extensions=php"/>
-            <arg value="--ignore=autoload.php"/>
-            <arg path="${basedir}/src"/>
-        </exec>
-    </target>
 
     <target name="phpcpd" description="Find duplicate code using PHPCPD">
         <exec executable="${basedir}/build/tools/phpcpd.phar" taskname="phpcpd">
@@ -136,10 +95,6 @@
             <arg value="--configuration"/>
             <arg path="${basedir}/build/phpunit.xml"/>
         </exec>
-    </target>
-
-    <target name="phpdox" depends="phploc-ci,phpcs-ci,phpmd-ci" description="Generate API documentation using phpDox">
-        <exec executable="${basedir}/build/tools/phpdox.phar" dir="${basedir}/build" taskname="phpdox"/>
     </target>
 
     <target name="-check-failure">
