--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="Money" default="build">
-    <target name="build" depends="prepare,lint,phploc-ci,pdepend,phpcpd-ci,phpunit,phpdox,-check-failure"/>
+<project name="test" default="build">
+    <target name="build" depends="prepare,lint,phpunit,-check-failure"/>
 
     <target name="clean" unless="clean.done" description="Cleanup build artifacts">
         <delete dir="${basedir}/build/api"/>
@@ -44,52 +44,7 @@
         </apply>
     </target>
 
-    <target name="phploc" description="Measure project size using PHPLOC">
-        <exec executable="${basedir}/build/tools/phploc.phar" taskname="phploc">
-            <arg value="--count-tests"/>
-            <arg path="${basedir}/src"/>
-            <arg path="${basedir}/tests"/>
-        </exec>
-    </target>
-
-    <target name="phploc-ci" depends="prepare"
-            description="Measure project size using PHPLOC and log result in CSV and XML format">
-        <exec executable="${basedir}/build/tools/phploc.phar" taskname="phploc">
-            <arg value="--count-tests"/>
-            <arg value="--log-csv"/>
-            <arg path="${basedir}/build/logs/phploc.csv"/>
-            <arg value="--log-xml"/>
-            <arg path="${basedir}/build/logs/phploc.xml"/>
-            <arg path="${basedir}/src"/>
-            <arg path="${basedir}/tests"/>
-        </exec>
-    </target>
-
-    <target name="pdepend" depends="prepare" description="Calculate software metrics using PHP_Depend">
-        <exec executable="${basedir}/build/tools/pdepend.phar" taskname="pdepend">
-            <arg value="--jdepend-xml=${basedir}/build/logs/jdepend.xml"/>
-            <arg value="--jdepend-chart=${basedir}/build/pdepend/dependencies.svg"/>
-            <arg value="--overview-pyramid=${basedir}/build/pdepend/overview-pyramid.svg"/>
-            <arg path="${basedir}/src"/>
-        </exec>
-    </target>
-
-
-    <target name="phpcpd" description="Find duplicate code using PHPCPD">
-        <exec executable="${basedir}/build/tools/phpcpd.phar" taskname="phpcpd">
-            <arg path="${basedir}/src"/>
-        </exec>
-    </target>
-
-    <target name="phpcpd-ci" depends="prepare"
-            description="Find duplicate code using PHPCPD and log result in XML format">
-        <exec executable="${basedir}/build/tools/phpcpd.phar" taskname="phpcpd">
-            <arg value="--log-pmd"/>
-            <arg path="${basedir}/build/logs/pmd-cpd.xml"/>
-            <arg path="${basedir}/src"/>
-        </exec>
-    </target>
-
+   
     <target name="phpunit" depends="prepare" description="Run unit tests with PHPUnit">
         <exec executable="${basedir}/build/tools/phpunit.phar" resultproperty="result.phpunit" taskname="phpunit">
             <arg value="--configuration"/>
