--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     ],
     "require": {
         "php": "^5.4|^7.0",
+        "phpunit/phpunit": "~4.3",
         "ext-intl": "*"
     },
     "autoload": {
