--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
     },
     "autoload": {
         "classmap": [
-            "vendor/autoload.php",
-            "vendor/"
+            "vendor/",
+            "src/"
         ]
     },
     "extra": {
