--- a/build.xml
+++ b/build.xml
@@ -10,7 +10,7 @@
         <property name="clean.done" value="true"/>
     </target>
 
-    <target name="prepare" unless="prepare.done" depends="clean,generate-code" description="Prepare for build">
+    <target name="prepare" unless="prepare.done" depends="clean" description="Prepare for build">
         <mkdir dir="${basedir}/build/api"/>
         <mkdir dir="${basedir}/build/coverage"/>
         <mkdir dir="${basedir}/build/logs"/>
@@ -18,17 +18,7 @@
         <property name="prepare.done" value="true"/>
     </target>
 
-    <target name="generate-code" description="Generate Currency-specific subclasses of Money and autoloader code">
-        <exec executable="${basedir}/build/generate-child-classes.php" taskname="generate-code"/>
-
-        <exec executable="${basedir}/build/tools/phpab.phar" taskname="generate-code">
-            <arg value="--output"/>
-            <arg path="vendor/autoload.php"/>
-            <arg path="vendor"/>
-        </exec>
-    </target>
-
-    <target name="lint" depends="generate-code">
+    <target name="lint">
         <apply executable="php" failonerror="true" taskname="lint">
             <arg value="-l"/>
 
